<resources>
    <string name="app_name">Self Maker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Self Maker</string>
    <string name="nav_header_subtitle">to.be@strong.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_focus">Focus</string>
    <string name="menu_sadhana">Sadhana</string>
    <string name="menu_veda">Veda</string>
    <string name="menu_statistics">Statistics</string>
    <string name="sign_in">Sign in</string>
</resources>