<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_map"
            android:icon="@mipmap/ic_bottom_nav_map"
            android:title="@string/menu_map"/>

    <item
            android:id="@+id/navigation_veda"
            android:icon="@mipmap/ic_bottom_nav_veda"
            android:title="@string/menu_veda"/>

    <item
            android:id="@+id/navigation_focus"
            android:icon="@drawable/ic_bottom_nav_focus"
            android:title="@string/menu_focus"/>

    <item
            android:id="@+id/navigation_sadhana"
            android:icon="@mipmap/ic_bottom_nav_sadhana"
            android:title="@string/menu_sadhana"/>

    <item
            android:id="@+id/navigation_statistics"
            android:icon="@mipmap/ic_bottom_nav_statistics"
            android:title="@string/menu_statistics"/>

</menu>