<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_map">

    <fragment
            android:id="@+id/navigation_map"
            android:name="com.artsam.selfmaker.ui.map.MapFragment"
            android:label="@string/menu_map"
            tools:layout="@layout/fragment_map"/>

    <fragment
            android:id="@+id/navigation_focus"
            android:name="com.artsam.selfmaker.ui.focus.FocusFragment"
            android:label="@string/menu_focus"
            tools:layout="@layout/fragment_focus"/>

    <fragment
            android:id="@+id/navigation_sadhana"
            android:name="com.artsam.selfmaker.ui.sadhana.SadhanaFragment"
            android:label="@string/menu_sadhana"
            tools:layout="@layout/fragment_sadhana"/>

    <fragment android:id="@+id/navigation_veda"
              android:name="com.artsam.selfmaker.ui.veda.VedaFragment"
              android:label="@string/menu_veda"
              tools:layout="@layout/fragment_veda"/>

    <fragment android:id="@+id/navigation_statistics"
              android:name="com.artsam.selfmaker.ui.statistics.StatisticsFragment"
              android:label="@string/menu_statistics"
              tools:layout="@layout/fragment_statistics"/>
</navigation>